# skystore

./: .editorconfig  .env.sample  .python-version  README.md  pyproject.toml
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/fixtures/: data.json  data2.json
catalog/management/commands/: clean_fill.py
catalog/migrations/: 0001_initial.py  0002_version.py  0003_alter_version_options_alter_product_slug_and_more.py  0004_alter_version_version_number.py  0005_product_owner.py  0006_alter_product_options_product_is_published.py
catalog/templates/catalog/: base.html  category_confirm_delete.html  category_detail.html  category_form.html  category_list.html  contact.html  index.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_category_card.html  inc_main_menu.html  inc_product_card.html
catalog/templatetags/: filters.py
config/: settings.py  urls.py
users/: forms.py  models.py  services.py  urls.py  views.py
users/management/commands/: csuser.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html  user_form.html
vlog/: admin.py  models.py  urls.py  views.py
vlog/fixtures/: data.json
vlog/migrations/: 0001_initial.py  0002_alter_vlogpost_is_published.py  0003_alter_vlogpost_options_vlogpost_owner.py
vlog/templates/vlog/: vlogpost_confirm_delete.html  vlogpost_detail.html  vlogpost_form.html  vlogpost_list.html
