[tool.poetry]
name = "skystore"
version = "0.1.0"
description = ""
authors = ["saysuu <skysaika@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.2"
django = "^4.2.9"
pillow = "^10.1.0"
ipython = "^8.18.1"
psycopg2-binary = "^2.9.9"
pytils = "^0.4.1"
python-dotenv = "^1.0.0"
python-slugify = "^8.0.1"
redis = "^5.0.1"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
